--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,30 @@ group = 'com.miluo'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
+ext {
+    springBootVersion = "2.3.1.RELEASE"
+    lombokVersion = "1.18.20"
+}
+
 repositories {
+    mavenLocal()
+    maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
+    maven { url "http://download.java.net/maven/2/" }
     mavenCentral()
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation("org.projectlombok:lombok:$lombokVersion")
+
+    implementation("org.springframework.boot:spring-boot-starter-security:$springBootVersion")
+    implementation("org.springframework.boot:spring-boot-starter-data-redis:$springBootVersion")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion")
+    implementation('org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE')
+    implementation('org.springframework.security:spring-security-jwt:1.0.9.RELEASE')
+
 }
 
 test {
